--- a/Client/Components/AddTransactionComponent.razor.css
+++ b/Client/Components/AddTransactionComponent.razor.css
@@ -144,6 +144,12 @@
 .outerTitleAndDate {
     display: flex;
     flex-direction: row;
+    row-gap: 1vh;
+    background-color: #F9F9F9;
+    padding-top: 1vh;
+    padding-bottom: 2vh;
+    padding-right: 1vw;
+    column-gap: 1vh;
 }
 
 .outerDetails {
@@ -275,6 +281,8 @@ input:checked + .slider:before {
     border: none;
     background-color: #EDEFF7;
     height: 6vh;
+    border-radius: 0.25rem;
+    width: 33vw;
 }
 
 .outerSum {
@@ -284,3 +292,140 @@ input:checked + .slider:before {
     width: 100%;
     text-align: right;
 }
+
+.outerPaymentMethod {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 2vh;
+}
+
+.primery-button {
+    border-radius: 0.25rem;
+    background: #6775F4;
+    color: #6775F4;
+    width: 15.375rem;
+    height: 2.75rem;
+    flex-shrink: 0;
+    color: #F9F9F9;
+    text-align: center;
+    font-family: Heebo;
+    font-size: 1.3125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border: none;
+}
+
+.repeatedBtn {
+    border-radius: 0.25rem;
+    background: #6775F4;
+    color: #6775F4;
+    width: 14.375rem;
+    height: 2rem;
+    flex-shrink: 0;
+    color: #F9F9F9;
+    text-align: center;
+    font-family: Heebo;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.secondery-button {
+    border: 1px solid #6775F4;
+    width: 15.375rem;
+    height: 2.75rem;
+    flex-shrink: 0;
+    border-radius: 0.375rem;
+    text-align: center;
+    font-family: Heebo;
+    font-size: 1.3125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.outerReBtn {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1vh;
+}
+
+.cancleRepeatedBtn {
+    border-radius: 0.25rem;
+    border: 1px solid #6775F4;
+    width: 14.375rem;
+    height: 2rem;
+    flex-shrink: 0;
+    text-align: center;
+    font-family: Heebo;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+/* Custom styles for the date input */
+.custom-date-input {
+    color: #6775F4; /* Text color */
+    background-color: #FFF;
+    /* Background color */
+    border: 1px solid #6775F4; /* Border color */
+    padding: 5px; /* Padding */
+    border-radius: 4px; /* Border radius */
+    width: 100%; /* Adjust width as needed */
+    -webkit-appearance: none; /* Remove default styling in WebKit browsers */
+    -moz-appearance: none; /* Remove default styling in Firefox */
+    appearance: none; /* Remove default styling in other browsers */
+    position: relative;
+    width: 77%;
+}
+
+    /* Add a custom icon as a background image */
+    .custom-date-input::before {
+        content: '';
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 20px; /* Adjust icon size as needed */
+        height: 20px; /* Adjust icon size as needed */
+        pointer-events: none;
+        background-image: url('css/images/calendar.svg');
+    }
+
+    .custom-date-input::-webkit-calendar-picker-indicator {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        opacity: 0; /* Hide the default icon but keep it clickable */
+        width: 100%;
+        height: 100%;
+    }
+
+    .custom-date-input::-moz-calendar-picker-indicator {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        opacity: 0; /* Hide the default icon but keep it clickable */
+        width: 100%;
+        height: 100%;
+    }
+
+    /* Change the text color when focused */
+    .custom-date-input:focus {
+        border-color: #6775F4; /* Change border color on focus */
+        outline: none; /* Remove default outline */
+    }
