--- a/Client/Components/AddTransactionComponent.razor.css
+++ b/Client/Components/AddTransactionComponent.razor.css
@@ -33,7 +33,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 2vh 0 2vh 0;
+    padding: 2vh 0 3vh 0;
     width: 100%;
     position: fixed;
     left: 0;
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    row-gap: 0.8vh;
+    row-gap: 0.2vh;
 }
 
 .outerTitle {
@@ -67,13 +67,14 @@
 .divider {
     height: 0.1vh;
     background-color: #D6D9F1;
-    margin-bottom: 4vh;
+    margin-bottom: 1vh;
 }
 
 .accordionAndTransDetailsWrap {
     display: flex;
     flex-direction: column;
     background-color: #EDEFF7;
+    margin-bottom: 1vh;
 }
 
 .transDetailsAccordion {
@@ -84,7 +85,7 @@
     width: 88.5vw;
     justify-content: space-between;
     flex-wrap: nowrap;
-    padding: 1.4vh;
+    padding: 0.75vh;
     align-items: center;
     align-content: flex-end;
     z-index: 1;
@@ -120,14 +121,21 @@
     row-gap: 1vh;
     background-color: #F9F9F9;
     padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-right: 1vw;
+    align-items: flex-start;
+}
+
+.outerReBtn {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1vh;
+    background-color: #F9F9F9;
+    padding-top: 1vh;
     padding-bottom: 2vh;
-    padding-right:1vw;
+    padding-right: 1vw;
 }
 
-
-.innerPaddingDiv{
-    width:99%
-}
 
 .titleName {
     font-weight: 500;
@@ -139,6 +147,7 @@
     box-shadow: 0px 85px 24px 0px rgba(171, 173, 191, 0.00), 0px 55px 22px 0px rgba(171, 173, 191, 0.01), 0px 31px 18px 0px rgba(171, 173, 191, 0.05), 0px 14px 14px 0px rgba(171, 173, 191, 0.09), 0px 3px 7px 0px rgba(171, 173, 191, 0.10);
     padding: 1vh;
     border: none;
+    width: 50vw;
 }
 
 .outerTitleAndDate {
@@ -155,13 +164,15 @@
 .outerDetails {
     display: flex;
     justify-content: center;
+    border-radius: 0.25rem;
+    box-shadow: 0px 72px 20px 0px rgba(207, 201, 201, 0.00), 0px 46px 18px 0px rgba(207, 201, 201, 0.01), 0px 26px 16px 0px rgba(207, 201, 201, 0.05), 0px 12px 12px 0px rgba(207, 201, 201, 0.09), 0px 3px 6px 0px rgba(207, 201, 201, 0.10);
 }
 
 .innerPaddingDiv {
-    width: 96%;
+    width: 98%;
     display: flex;
     flex-direction: column;
-    row-gap: 0.7vh;
+    row-gap: 0.3vh;
 }
 
 .budgetBox {
@@ -170,7 +181,7 @@
     background: #FFF;
     box-shadow: 0px 85px 24px 0px rgba(171, 173, 191, 0.00), 0px 55px 22px 0px rgba(171, 173, 191, 0.01), 0px 31px 18px 0px rgba(171, 173, 191, 0.05), 0px 14px 14px 0px rgba(171, 173, 191, 0.09), 0px 3px 7px 0px rgba(171, 173, 191, 0.10);
     border: none;
-    padding: 1.5vh 1vh;
+    padding: 1vh 1vh;
     font-size: 1.6rem;
     width: 65%;
 }
@@ -179,7 +190,6 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    padding: 1vh 0;
     align-items: center;
     position: relative;
     flex-direction: column;
@@ -267,6 +277,17 @@ input:checked + .slider:before {
     content: "";
     height: 1.5em;
     width: 1.5em;
+    background-color: #edeff7;
+    transition: all 0.4s ease 0s;
+    border-radius: 50%;
+    border: 0.2px solid rgb(103, 117, 244);
+}
+
+.knobYes {
+    position: absolute;
+    content: "";
+    height: 1.5em;
+    width: 1.5em;
     background-color: rgb(103, 117, 244);
     transition: all 0.4s ease 0s;
     border-radius: 50%;
@@ -275,6 +296,7 @@ input:checked + .slider:before {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width:100%;
 }
 
 .splitDrop {
@@ -305,12 +327,12 @@ input:checked + .slider:before {
     background: #6775F4;
     color: #6775F4;
     width: 15.375rem;
-    height: 2.75rem;
+    height: 2.3rem;
     flex-shrink: 0;
     color: #F9F9F9;
     text-align: center;
     font-family: Heebo;
-    font-size: 1.3125rem;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -340,12 +362,12 @@ input:checked + .slider:before {
 .secondery-button {
     border: 1px solid #6775F4;
     width: 15.375rem;
-    height: 2.75rem;
+    height: 2.3rem;
     flex-shrink: 0;
     border-radius: 0.375rem;
     text-align: center;
     font-family: Heebo;
-    font-size: 1.3125rem;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -386,7 +408,7 @@ input:checked + .slider:before {
     -moz-appearance: none; /* Remove default styling in Firefox */
     appearance: none; /* Remove default styling in other browsers */
     position: relative;
-    width: 77%;
+    text-align: center;
 }
 
     /* Add a custom icon as a background image */
@@ -399,7 +421,7 @@ input:checked + .slider:before {
         width: 20px; /* Adjust icon size as needed */
         height: 20px; /* Adjust icon size as needed */
         pointer-events: none;
-        background-image: url('css/images/calendar.svg');
+        /*background-image: url('css/images/calendar.svg');*/
     }
 
     .custom-date-input::-webkit-calendar-picker-indicator {
@@ -429,3 +451,164 @@ input:checked + .slider:before {
         border-color: #6775F4; /* Change border color on focus */
         outline: none; /* Remove default outline */
     }
+
+.addTagBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    position: relative; /* Set the button as a relative container */
+    display: flex; /* Use flexbox to center content */
+    align-items: center; /* Align items vertically in the center */
+    justify-content: center; /* Align items horizontally in the center */
+    overflow: hidden; /* Prevents content from spilling out */
+}
+
+.outerGallery {
+    background-color: #F9F9F9;
+    border-radius: 0.25rem;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 3vh;
+    width: 100%;
+    padding: 1vh 0;
+    padding-top: 2vh;
+}
+
+.tag {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 0.25rem;
+    width: 5.5rem;
+    height: 2rem;
+    justify-items: center;
+}
+.pageDots {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.dot {
+    height: 0.5rem;
+    width: 0.5rem;
+    margin: 0 5px;
+    background-color: #D6D9F1;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+}
+
+    .dot.active {
+        background-color: #6775F4;
+    }
+
+.galleryArrow {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
+.disBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    opacity:25%;
+}
+
+.outerBtnAndDots {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 3vh 2vw;
+}
+
+
+.outerGalleryAndNav {
+    background-color: #F9F9F9;
+    border-radius: 0.25rem;
+    border: 1px solid #D6D9F1;
+    box-shadow: 0px 36px 10px 0px rgba(79, 89, 176, 0.00), 0px 23px 9px 0px rgba(79, 89, 176, 0.01), 0px 13px 8px 0px rgba(79, 89, 176, 0.03), 0px 6px 6px 0px rgba(79, 89, 176, 0.05), 0px 1px 3px 0px rgba(79, 89, 176, 0.06);
+    width: 100%;
+}
+
+.chosenTag{
+    font-weight:600;
+}
+
+.tagLabel {
+    position: absolute; /* Positioning the tag label absolutely within the button */
+    top: 50%; /* Position at 50% from the top */
+    left: 50%; /* Position at 50% from the left */
+    transform: translate(-50%, -50%); /* Adjust the centering correctly */
+    z-index: 10; /* Ensure it's above the other content */
+    white-space: nowrap; /* Keeps the text on one line */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.description {
+    border-radius: 0.25rem;
+    background: #FFF;
+    box-shadow: 0px 33px 9px 0px rgba(0, 0, 0, 0.00), 0px 21px 8px 0px rgba(0, 0, 0, 0.01), 0px 12px 7px 0px rgba(0, 0, 0, 0.02), 0px 5px 5px 0px rgba(0, 0, 0, 0.03), 0px 1px 3px 0px rgba(0, 0, 0, 0.04);
+    rgba(255, 255, 255, 1);
+    border: none;
+    width: 100%;
+}
+
+.outerSaveBtns {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    row-gap: 1.5vh;
+    align-items: center;
+    margin: 1.3vh 0;
+}
+
+.outerRepetedTrans {
+    background: #F9F9F9;
+    border-radius: 1.75rem 1.4375rem 0rem 0rem;
+    background-color: #F9F9F9;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 2vh 0 2vh 0;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1001;
+}
